fix loading of jpeg, tiff and png with a chinese character (or any other utf8) in the name. (and fix saving as an extra free bonus)

BUG:123495

svn path=/trunk/koffice/; revision=518325