filters/krita/jpeg/kis_jpeg_converter.cc
@@ -25,6 +25,8 @@ extern "C" {
 #include <iccjpeg.h>
 }
 
+#include <qfile.h>
+
 #include <kapplication.h>
 #include <KoDocumentInfo.h>
 
@@ -108,7 +110,7 @@ KisImageBuilder_Result KisJPEGConverter::decode(const KURL& uri)
     jpeg_create_decompress(&cinfo);
     
     // open the file
-    FILE *fp = fopen(uri.path().ascii(), "rb");
+    FILE *fp = fopen(QFile::encodeName(uri.path()), "rb");
     if (!fp)
     {
         return (KisImageBuilder_RESULT_NOT_EXIST);
@@ -358,7 +360,7 @@ KisImageBuilder_Result KisJPEGConverter::buildFile(const KURL& uri, KisPaintLaye
     if (!uri.isLocalFile())
         return KisImageBuilder_RESULT_NOT_LOCAL;
     // Open file for writing
-    FILE *fp = fopen(uri.path().ascii(), "wb");
+    FILE *fp = fopen(QFile::encodeName(uri.path()), "wb");
     if (!fp)
     {
         return (KisImageBuilder_RESULT_FAILURE);
